feat!: release ExplosionProtector 3.0 with universal JAR, CoreProtect 24, and always-explode whitelist
## Summary
- Ship **ExplosionProtector 3.0** as one universal JAR for Paper/Folia **1.19–26.1**
- Integrate **CoreProtect 24.0**, async lookup queue, and durable SQLite tracker
- Add configurable **`always-explode-blocks`** whitelist and fix natural terrain exploding by default

## Changes
- **feat!** drop per-version JARs in favor of a single multi-version artifact (`api-version: 1.19`)
- **feat** add `always-explode-blocks` so listed materials always break in explosions
- **fix** stop treating unknown/natural blocks as protected by default (`protect-first-unknown: false`)
- **fix** keep tracker persistence across chunk/world unload (memory eviction only + restore)
- **perf** keep CoreProtect lookups async with cache, queue limits, and circuit breaker
- **build** target Java 17 bytecode and Folia-safe reflective schedulers
- **docs** update README and Modrinth description for 3.0

## Breaking changes
- Default behavior no longer protects unknown blocks first
- Existing servers should set `protect-first-unknown: false` and review `always-explode-blocks`
- Prefer CoreProtect **24.0+**

## Test plan
- [ ] Install `ExplosionProtector-3.0.jar` + CoreProtect 24 on Paper/Folia
- [ ] Confirm natural blocks break under TNT
- [ ] Confirm player-placed blocks stay protected
- [ ] Confirm whitelisted materials (e.g. `TNT`) still explode when player-placed
- [ ] Run `/ep status`, `/ep reload`, language switch